--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
@@ -23,6 +24,7 @@
     "@fullpage/angular-fullpage": "^0.1.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.8.1",
     "jquery": "^3.7.1",
     "mammoth": "^1.7.0",
     "mdb-angular-ui-kit": "^5.2.0",
