--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullpage/angular-fullpage": "^0.1.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "jquery": "^3.7.1",
     "mammoth": "^1.7.0",
